# isfdb_migration

./: .gitignore  INSTALLATION.md  README.md  book_club_ratings.csv  book_club_users.csv  cold_start.py  customFolds.py  deduplicate_isbns.py  etl.py  importGoodreadsRatings.py  isbn_deduplication_functions.py  isbn_duplicates_report.py  migration_functions.py  migration_script.py  nearestNeighbors.py  parameterTuning.py  predict.py  pyproject.toml  setup_configuration.py  test_mp.py  util.py  viewBook.py  viewUser.py
book_db_migration/: migration_functions.py  migration_script.py
config/: default.cfg  dev.cfg  isfdb_title.stop  prod.cfg
